carry over fix from https://github.com/CentralValleyModeling/wrims/pull/236
flips axis on plots in PDF report